# resources/views/welcome.php
@@ -29,7 +29,7 @@
                 <li v-for="todo in filteredTodos" class="todo" :key="todo.id"
                     :class="{ completed: todo.completed, editing: todo == editedTodo }">
                     <div class="view">
-                        <input class="toggle" type="checkbox" v-model="todo.completed" />
+                        <input class="toggle" type="checkbox" v-model="todo.completed" @change="save(todo)" />
                         <label @dblclick="editTodo(todo)">{{ todo . title }}</label>
                         <button class="destroy" @click="removeTodo(todo)"></button>
                     </div>
